# tracking_education

bindpy/: bind_ekf.cpp  bind_models.cpp
cmake/: FindGTest.cmake  conanbuildinfo.txt
estimator/: conanfile.txt
estimator/bindpy/: bind_ekf.cpp  bind_models.cpp
estimator/cmake/: Findpybind11.cmake  conaninfo.txt
estimator/scripts/: test_ekf_est_3dTarget.ipynb  test_ekf_est_3dTarget.py
estimator/scripts/.ipynb_checkpoints/: test_ekf_est_3dTarget-checkpoint.ipynb
estimator/src/: ekf.h  kf.h  models.h  utils.h
estimator/test/: CMakeLists.txt
kalmanProj/: CMakeLists.txt  Вопросы_20240305.docx
kalmanProj/source/: data_creator_eigen3.h  kf_armadillo.h  kf_eigen3.cpp  kf_eigen3.h  main.cpp  mathematics_common.h  printer_eigen3.h
kalmanProj/test/: CMakeLists.txt  data_creator_eigen3.h  main.cpp  printer_eigen3.h  test_kf_eigen3.cpp  test_kf_eigen3.h
kf/: .gitignore  CMakeLists.txt  README.md
kf/bindpy/: CMakeLists.txt  bind_ekf.cpp  bind_ekf.h  bind_ekf_eigen3.cpp  bind_ekf_eigen3.h  bind_gnn_prototype.cpp  bind_gnn_prototype.h  bind_imm.cpp  bind_imm.h  bind_imm_prototype.cpp  bind_imm_prototype.h  bind_kf.cpp  bind_kf.h  bind_kf_eigen3.cpp  bind_kf_eigen3.h  bind_measurement.cpp  bind_measurement.h  bind_models.cpp  bind_track.cpp  bind_track.h  bind_tracker.cpp  bind_tracker.h  bind_tracker_prototype.cpp  bind_tracker_prototype.h  bindings.cpp
kf/scripts/: ct_script.py  ct_script_json_data.py  data 24-18-19 17_08_1724077092.json  ekf_comp.py  ekf_script.py  filterpy_test.py  filterpy_test_ekf.py  filterpy_test_imm.py  filterpy_test_kf.py  fp0.py  imm_test.py  imm_test2.py  imm_test3.py  jacobian_analitic.py  kf_script.py  measgen.py  read_json.py  script.py  stand_10_4cross.py  stand_10_ca_xx_dive.py  stand_10_ct_xx.py  stand_10_ct_xx_round.py  stand_10_cv_xx.py  stand_10_manevr.py  stand_10_zavisanie.py  test.py  test_10_4cross.py  test_10_ca_xx_dive.py  test_10_ct_deg_xx_round.py  test_10_ct_xx.py  test_10_ct_xx_imm.py  test_10_ct_xx_round.py  test_10_imm_manevr.py  test_10_imm_zavisanie.py  track_script.py  tree_vizual.py
kf/scripts/data/: measurements_maneuvre_cartesian.json  measurements_maneuvre_polar.json  track_maneuvre.json  tracks_x.json
kf/source/: ekf.h  ekf2.h  ekf_eigen3.h  ekf_math.h  ekf_qr.h  estimator.h  filter.h  gnn.h  gnn_prototype.h  imm.h  imm_prototype.h  kf.h  kf_armadillo.cpp  kf_armadillo.h  kf_eigen3.cpp  kf_eigen3.h  kf_math.h  main.cpp  mathematics_common.h  models.h  track.h  tracker.h  tracker_prototype.h  utils.h
kf/test/: CMakeLists.txt  chprinter.h  data_creator_eigen3.h  ekf_eigen3_test.cpp  exceptions.h  main.cpp  test.cpp  test_ekf.cpp  test_gnn.cpp  test_gnn_prototype.cpp  test_imm.cpp  test_kf.cpp  test_kf_eigen3.cpp  test_kf_eigen3.h  test_models-ct.cpp  test_plotpythone.cpp  test_track.cpp  test_track.h  test_tracker_prototype.cpp
scripts/: test_ekf_est_2dTarget.ipynb  test_ekf_est_3dTarget.ipynb  test_kf_est_2dTarget.ipynb
scripts/.ipynb_checkpoints/: test_ekf_est_2dTarget-checkpoint.ipynb
src/: ekf.h  models.h  utils.h
tracker/: CMakeLists.txt
tracker/bindpy/: CMakeLists.txt  bind_ekf.cpp  bind_ekf.h  bind_kf.cpp  bind_models.cpp  bind_models.h  bind_tracker.cpp
tracker/scripts/: auction_minimization_sum.py  filterpy_test_ekf_ct.py  filterpy_test_ekf_pol.py  filterpy_test_imm.py  filterpy_test_track.py  jacobian_analitic.py  jacobian_polar.py  stand_10_4cross.py  stand_10_cv_pol.py  test_10_4cross.py  test_10_ct_deg_xx_round.py  test_10_ct_xx.py  test_10_ct_xx_imm.py  test_10_ct_xx_round.py  test_10_cv_dec.py  test_10_cv_pol.py  test_10_cv_xx.py  test_10_imm_manevr.py  test_10_imm_zavisanie.py
tracker/source/: ekf.h  filter.h  gnn.h  imm.h  kf.h  measurement.h  models.h  track.h  tracker.h
tracker/test/: CMakeLists.txt  test_ekf.cpp  test_gnn.cpp  test_imm.cpp  test_kf.cpp  test_models.cpp  test_track.cpp  test_tracker.cpp
